<resources>
    <string name="app_name">AdsTek</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="select_gender">Select Gender</string>
    <string name="select_nation">Select Nationality</string>
    <string name="select_phone_number">Select Phone Number</string>
    <string name="select_id_type">Select ID Type</string>
    <string name="enter_number">Enter your phone number</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_id">Enter your ID number</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_confirm_password">Confirm your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="driver_registration">Driver Registration</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="nationality">Nationality</string>
    <string name="id_type">ID Type</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="btn_continue">Continue</string>
    <string name="image_types">JPG, PNG</string>
    <string name="upload_profile_photo">Upload profile photo</string>
    <string name="upload_id">Upload ID</string>
    <string name="upload_id_card">Upload ID Card</string>
    <string name="verification">Get verification code to sign up</string>
    <string name="verification_desc">How would you like to receive a verification code</string>
    <string name="phone_number">Phone number</string>

    <string name="resend_otp_in">"Resend code in %d second(s)"</string>
    <string name="resend_otp">"Resend code"</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="enter_the_code">Enter the code</string>

    <string name="failed_signin">Sign In Failed</string>
    <string name="success_signin">Sign In Successfully</string>

    <string-array name="id_type">
        <item>Driving License</item>
        <item>Passport</item>
        <item>Nation ID</item>
    </string-array>

    <string-array name="service_providers">
        <item>MTN</item>
        <item>Telecel</item>
        <item>Airtel - Tigo</item>
    </string-array>

    <string name="title_activity_ads">AdsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="tic_desc">Tic-Tac-Toe is a simple two-player game where players take turns marking X or O in a 3x3 grid. The first to align three of their marks horizontally, vertically, or diagonally wins.</string>
    <string name="memory_card_desc">In the Memory Card Game, players flip two cards at a time to find matching pairs.</string>
    <string name="trivia_desc">Trivia is a game where players answer questions from various categories to test their knowledge. The player with the most correct answers wins.</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="view_wallets">View Wallets</string>
    <string name="view_mobile_money_wallet">Mobile Money Wallet</string>
    <string name="add_mobile_money">Add Mobile Money</string>
    <string name="add_bank_account">Add Bank Account\n</string>
    <string name="bank_wallets">Bank Wallets</string>
    <string name="ok">Ok\n</string>
    <string name="cancel">Cancel\n</string>
</resources>