<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".drivers.onboarding.FirstRegistrationFragment"
    android:background="@color/white">


    <include
        android:id="@+id/back"
        layout="@layout/common_layout_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver_registration"
        android:textColor="@color/black"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/back"
        app:layout_constraintBottom_toBottomOf="@id/back"
        app:layout_constraintStart_toEndOf="@id/back"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="34dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintTop_toBottomOf="@id/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/uploadIDText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_id"
                android:textColor="@color/black"
                style="@style/TextAppearance.MaterialComponents.Body1"
                app:fontFamily="@font/lexend"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/uploadIDCard"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:elevation="12dp"
                android:layout_marginHorizontal="120dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/dashes_lines"
                app:cardCornerRadius="10dp"
                app:elevation="12dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/uploadIDText">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/dashes_lines"
                    android:padding="24dp">

                    <ImageView
                        android:id="@+id/tvUploadIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/outline_cloud_upload_24"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/tvUploadText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upload_id_card"
                        android:textColor="@color/link"
                        android:gravity="center"
                        android:drawablePadding="12dp"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        app:fontFamily="@font/lexend"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <TextView
                        android:id="@+id/tvTypeUpload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/image_types"
                        android:gravity="center"
                        android:drawablePadding="12dp"
                        android:textColor="@color/black_tint"
                        app:fontFamily="@font/lexend"
                        app:layout_constraintTop_toBottomOf="@id/tvUploadText"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <com.adstek.components.AdsTextField
                android:id="@+id/idCardNumberField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:hintText="Enter your ID number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/uploadIDCard"
                app:leadingIcon="@drawable/baseline_numbers_24"
                app:titleTextInput = "ID Number" />

            <com.adstek.components.AdsTextField
                android:id="@+id/firstNameTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:hintText="Enter your number plate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/idCardNumberField"
                app:leadingIcon="@drawable/baseline_numbers_24"
                app:titleTextInput = "Number Plate" />

            <com.adstek.components.AdsTextField
                android:id="@+id/lastNameTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:hintText="@string/enter_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/firstNameTextField"
                app:leadingIcon="@drawable/baseline_numbers_24"
                app:titleTextInput = "Phone Number" />

            <com.adstek.components.AdsTextField
                android:id="@+id/passwordTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:hintText="@string/enter_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lastNameTextField"
                app:leadingIcon="@drawable/outline_email_24"
                app:titleTextInput = "Password"/>

            <com.adstek.components.AdsTextField
                android:id="@+id/passwordConfirmTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:hintText="@string/enter_confirm_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordTextField"
                app:leadingIcon="@drawable/outline_email_24"
                app:titleTextInput = "@string/confirm_password"/>

            <com.adstek.components.AdsTekButton
                android:id="@+id/uploadBtn"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="58dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:buttonText = "Continue"
                app:layout_constraintTop_toBottomOf="@id/passwordConfirmTextField" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>