<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <include
        android:id="@+id/includeBackBtn"
        layout="@layout/common_layout_back_button"/>

    <TextView
        android:id="@+id/verify_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_code"
        android:textFontWeight="850"
        app:layout_constraintTop_toBottomOf="@id/includeBackBtn"
        app:layout_constraintStart_toStartOf="@id/guideline8"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/message_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="A code was sent to +233541715351"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/verify_text_title"
        app:layout_constraintStart_toStartOf="@id/guideline8"/>

    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otpInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        app:bar_active_color="#00ffffff"
        app:bar_enabled="true"
        app:otp_box_background_success="@drawable/bg_rounded_cornerse_success"
        app:otp_box_background_error="@drawable/bg_rounded_cornerse_error"
        app:bar_error_color="@color/red"
        app:bar_inactive_color="#00ffffff"
        app:bar_success_color="@color/color_green"
        app:height="54dp"
        app:length="4"
        app:otp_box_background="@drawable/bg_rounded_corners_white_outline"
        app:otp_box_background_active="@drawable/bg_rounded_corners_white_outline_active"
        app:otp_text_size="30sp"
        app:width="48dp"
        app:layout_constraintTop_toBottomOf="@id/message_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/resendCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/resend_otp_in"
        android:visibility="gone"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="@id/guideline8"
        app:layout_constraintTop_toBottomOf="@id/otpInput"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/resendText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/resend_otp"
        android:textColor="@color/color_green"
        android:padding="8dp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/guideline8"
        app:layout_constraintTop_toBottomOf="@id/otpInput"
        tools:visibility="visible" />



</androidx.constraintlayout.widget.ConstraintLayout>